Fixed priority icons on kanban page bleeding through the kanban status header. * Also removed custom.css and refactored individual signup page.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -110,7 +110,8 @@ $rainbow: #EB222A, #F36F26, #F68F22, #FEC317, #F4EA28, #9BCA3C,
 
 @mixin rune-check-small($color-index) {
     display: inline;
-    margin: 0px 4px 0px 0px;
+    margin: 10px 0;
+    text-align: center;
     .roo-icon-small {
         @include roo-image($color-index, 40px);
     }
@@ -201,6 +202,8 @@ $rainbow: #EB222A, #F36F26, #F68F22, #FEC317, #F4EA28, #9BCA3C,
 
 #hidden-color-input {
     position: absolute;
+    top: 0;
+    left: 0;
     visibility: hidden;
 }
 
@@ -274,6 +277,28 @@ $rainbow: #EB222A, #F36F26, #F68F22, #FEC317, #F4EA28, #9BCA3C,
     }
 }
 
+// Signup page style specifications.
+.signup {
+    h2 {
+        text-align: center;
+    }
+    input {
+        // margin: 0;
+    }
+    .form-control {
+        margin: 15px 0;
+    }
+    .signup-btn {
+        text-align: center;
+    }
+    width: 440px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
+    padding-top: 50px;
+    text-align: center;
+}
+
 // Project page CSS style specifications.
 .project-container {
     position: relative;
@@ -305,6 +330,7 @@ $rainbow: #EB222A, #F36F26, #F68F22, #FEC317, #F4EA28, #9BCA3C,
 .kanban-board-header {
     position: fixed;
     width: 100%;
+    z-index: 700;
 }
 
 .kanban-board-body {
@@ -320,7 +346,6 @@ $rainbow: #EB222A, #F36F26, #F68F22, #FEC317, #F4EA28, #9BCA3C,
     width: 100%;
     border-spacing: 15px 0;
     min-height: 160px;
-    z-index: -1;
 }
 
 .kanban-board-row-header {
@@ -339,6 +364,10 @@ $rainbow: #EB222A, #F36F26, #F68F22, #FEC317, #F4EA28, #9BCA3C,
 }
 
 .kanban-col-header {
+    display: table-cell;
+    float: none;
+    width: 25%;
+    vertical-align: top;
     padding: 10px 0 0 0;
     font-weight: bold;
     background-color: $color-2;
@@ -386,15 +415,17 @@ $rainbow: #EB222A, #F36F26, #F68F22, #FEC317, #F4EA28, #9BCA3C,
 
 @mixin kanban-priority-icon($color-index) {
     display: inline-block;
-    > #priority-icon {
+    z-index: 0;
+    > .priority-icon {
         @extend .img-rounded;
+        position: relative;
         margin-left: 4px;
         height: 10px;
         width: 10px;
         display: inline-block;
         background-color: nth($color-prioritiy, $color-index);
     }
-    > #priority-text {
+    > .priority-text {
         left: 4px;
         display: inline-block;
         position: relative;
